--- a/Views/Card/List.cshtml
+++ b/Views/Card/List.cshtml
@@ -1,24 +1,15 @@
-﻿@model PsCoreDemo.ViewModels.CardListViewModel
+﻿@model CardListViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>@Model.CurrentCategory</h1>
-    <ul>
-        @foreach (var card in Model.Cards)
-        {
-            <li>
-                <h2>@card.Name</h2>
-                <p>@card.Description</p>
-                <img src="@card.Image" alt="@card.Name" />
-                <p>Points: @card.Points</p>
-            </li>
-        }
-    </ul>
-</body>
-</html>
+
+<h3>@Model.CurrentCategory</h3>
+<ul>
+    @foreach (var card in Model.Cards)
+    {
+        <li>
+            <h2>@card.Name</h2>
+            <p>@card.Description</p>
+            <img src="@card.Image" alt="@card.Name" />
+            <p>Points: @card.Points</p>
+        </li>
+    }
+</ul>
